# RoseIDE

./: .gitignore  ASMHighlighter.cpp  ASMHighlighter.hpp  CMakeLists.txt  MenuBarIDE.qml  RoseIDE_en_GB.ts  main.cpp  main.qml  qml.qrc
